# uni_multi_model

./: .gitignore  01-lr-model-yaml.py  01-lr-model.py  01-univariate.ipynb  01-xg-model.py  02-lr-model.py  02-multivariate.ipynb  03_load_test_model.py  README.md  config.yaml  consume_model.py  fast_app.py  main.py  pyproject.toml  testmodel.py
mlruns/0/: meta.yaml
mlruns/138623722757278916/: meta.yaml
mlruns/138623722757278916/9fd4cc293dcf42be8cbbccd6e6181471/: meta.yaml
mlruns/138623722757278916/9fd4cc293dcf42be8cbbccd6e6181471/metrics/: mae  mse  r2  rmse
mlruns/138623722757278916/9fd4cc293dcf42be8cbbccd6e6181471/outputs/m-ea6175ed1a5c4694982a414827770ef4/: meta.yaml
mlruns/138623722757278916/models/m-ea6175ed1a5c4694982a414827770ef4/: meta.yaml
mlruns/138623722757278916/models/m-ea6175ed1a5c4694982a414827770ef4/artifacts/: MLmodel  conda.yaml  input_example.json  model.pkl  requirements.txt  serving_input_example.json
mlruns/138623722757278916/models/m-ea6175ed1a5c4694982a414827770ef4/metrics/: mae  mse  r2  rmse
mlruns/138623722757278916/models/m-ea6175ed1a5c4694982a414827770ef4/tags/: mlflow.modelVersions  mlflow.source.name
mlruns/models/UnivariateLinearRegressionModel/: meta.yaml
mlruns/models/UnivariateLinearRegressionModel/version-1/: meta.yaml
