[project]
name = "uni-multi-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.51",
    "matplotlib>=3.10.6",
    "mlflow>=3.4.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "psycopg>=3.2.10",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
